--- a/about.html
+++ b/about.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
 b. 1991
+</body>
+
+</html>
+
+
+
+
