--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hiiiiii jessica this is my new website yay :D
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+<h1>hiiiiii jessica this is my new website yay :D</h1>
+</body>
+
+</html>
+
+
