--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
 <body>
 <h1>hiiiiii jessica this is my new website yay :D</h1>
+
+<img src="images/cute-baby-ocelot-kitten.jpg">
+
 </body>
 
 </html>
